Began fixing styles Added picks above and below games Can tell if you were correct or not Turn new additions green and red on game play Bolded winner of each game Began messing with tourny spacing

--- a/src/components/UI/TeamBar.module.css
+++ b/src/components/UI/TeamBar.module.css
@@ -2,11 +2,3 @@
     border: 1px solid green;
 }
 
-.selectedTeamDidNotWin  {
-    text-decoration: none;
-}
-
-.strikeTeamName {
-    text-decoration: line-through;
- 
-}
